--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "regular";
+  src: url("./assets/fonts/MonaSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: "semibold";
+  src: url("./assets/fonts/MonaSans-SemiBold.ttf");
+}
+
+@font-face {
+  font-family: "bold";
+  src: url("./assets/fonts/MonaSans-Bold.ttf");
+}
+
+@font-face {
+  font-family: "extra-bold";
+  src: url("./assets/fonts/MonaSans-ExtraBold.ttf");
+}
+
+@font-face {
+  font-family: "black";
+  src: url("./assets/fonts/MonaSans-Black.ttf");
+}
+
+*{
+  font-family: "regular";
+}
+
+.bold{
+  font-family: "bold";
+}
