--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -1,16 +1,39 @@
-body, html{
+body,
+html {
     overflow-x: hidden;
     background: #111111;
 }
 
-.container{
+.container {
     width: 100%;
     max-width: 1240px;
     margin: 0 auto;
     padding: 0 15px;
 }
 
-h1{
+main {
+    background: url("../images/bg.png");
+    background-size: 100%;
+    background-position: top;
+    background-repeat: no-repeat;
+}
+
+h1 {
     line-height: 80px;
     font-weight: 500;
+}
+
+.card {
+    box-shadow: 0px 7px 48px 0px rgba(0, 0, 0, 0.10);
+}
+
+.ck {
+    background: #111 !important;
+    border: unset !important;
+    color: white !important;
+}
+
+.ck.ck-editor__top.ck-reset_all {
+    border-bottom: 1px solid white !important;
+    padding-bottom: 10px;
 }
