--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -23,6 +23,20 @@ h1 {
     font-weight: 500;
 }
 
+@media screen and (max-width: 992px){
+    h1 {
+        line-height: 50px;
+        font-weight: 500;
+    }
+}
+
+@media screen and (max-width: 767px){
+    h1 {
+        line-height: 35px;
+        font-weight: 500;
+    }
+}
+
 .card {
     box-shadow: 0px 7px 48px 0px rgba(0, 0, 0, 0.10);
 }
